# LifeScript

./: .env.example  .gitignore  ARCHITECTURE.md  BEGINNER_TASKS.md  CLAUDE.md  LifeScript.icns  LifeScript.spec  README.md  SETUP_GUIDE.md  STRATEGY.md  app.py  pyproject.toml  schema.sql  supabase_rls_policies.sql
.github/workflows/: ci.yml
ios/LifeScript/: project.yml
ios/LifeScript/LifeScript.xcodeproj/: project.pbxproj
lifescript/: __init__.py  __main__.py  api.py  auth.py  chat.py  context_analyzer.py  exceptions.py  google_auth.py  holidays.py  llm.py  log_queue.py  traits.py
lifescript/auth/: __init__.py  auth.py
lifescript/compiler/: compiler.py  validator.py
lifescript/database/: client.py
lifescript/functions/: __init__.py  calendar.py  date_fn.py  device.py  gmail.py  list_fn.py  machine.py  math_fn.py  memory.py  notify.py  qr_fn.py  random_fn.py  sound_fn.py  streak.py  summarize_fn.py  time_fn.py  translate_fn.py  weather.py  web.py  widget.py
lifescript/plugins/: __init__.py  base.py  discord_plugin.py  line_plugin.py  log_plugin.py  math_plugin.py  time_plugin.py  weather_plugin.py
lifescript/sandbox/: runner.py
lifescript/scheduler/: scheduler.py
lifescript/ui/: app.py  concierge_view.py  dashboard_view.py  home_view.py  login_screen.py  main_screen.py  onboarding_screen.py  reference_view.py  settings_screen.py  settings_view.py  splash_screen.py
tests/: conftest.py  test_auth.py  test_compiler.py  test_database.py  test_functions.py  test_math_plugin.py  test_plugins.py  test_sandbox.py  test_scheduler.py  test_validator.py
(+17 files in other folders)
