[project]
name = "lifescript"
version = "0.1.0"
description = "暮らしにコードを書け - A DSL that compiles human intent into life automation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.24.0",
    "httpx>=0.27.0",
    "litellm>=1.30.0",
    "apscheduler>=3.10.4",
    "RestrictedPython>=7.1",
    "python-dotenv>=1.0.0",
    "supabase>=2.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
lifescript = "lifescript.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
